--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,14 +11,14 @@
         <th>URL</th>
         <th>Descripcion</th>
         <th></th>
-        <th></th>
       </tr>
       <% @products.each do |p| %>
       <tr>
-        <th><%= p.id %></th>
-        <th><%= p.name %></th>
-        <th><%= p.url %></th>
-        <th><%= p.description %></th>
+        <td><%= p.id %></td>
+        <td><%= link_to p.name, p %></td>
+        <td><%= p.url %></td>
+        <td><%= p.description %></td>
+        <td><%= link_to "Editar", edit_product_path(p) %></td>
 
       </tr>
       <% end %>
